--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <description></description>
     <name>Flights App</name>
     <repositories>
-	    <repository>
-	        <id>java.net-m2</id>
-	        <name>java.net - Maven 2</name>
-	        <url>https://repository.jboss.org/nexus/content/repositories/java.net-m2</url>
-	    </repository>
+        <repository>
+            <id>java.net-m2</id>
+            <name>java.net - Maven 2</name>
+            <url>https://repository.jboss.org/nexus/content/repositories/java.net-m2</url>
+        </repository>
     </repositories>
     <build>
         <plugins>
@@ -21,8 +21,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -109,5 +109,13 @@
             <version>1.2.17</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
+
 </project>
