--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,51 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    id="WebApp_ID" version="2.5">
-    
-    <display-name>HelloWorldServlet</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+  <display-name>Flights</display-name>
+  <filter>
+    <filter-name>AccessCheckerFilter</filter-name>
+    <filter-class>net.mirantis.flights.web.AccessCheckerFilter</filter-class>
+    <init-param>
+      <param-name>firstPage</param-name>
+      <param-value>/login.jsp</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>AccessCheckerFilter</filter-name>
+    <url-pattern>/security/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>AdminFilter</filter-name>
+    <filter-class>net.mirantis.flights.web.AdminFilter</filter-class>
+    <init-param>
+      <param-name>mainPage</param-name>
+      <param-value>/security/MainPageServlet</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>AdminFilter</filter-name>
+    <url-pattern>/security/admin/*</url-pattern>
+  </filter-mapping>
 
-    <filter>
-        <filter-name>AccessCheckerFilter</filter-name>
-        <filter-class>net.maven.AccessCheckerFilter</filter-class>
-        <init-param>
-            <param-name>firstPage</param-name>
-            <param-value>/login.jsp</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>AccessCheckerFilter</filter-name>
-        <url-pattern>/security/*</url-pattern>
-    </filter-mapping>
+   <!--listener>
+    <listener-class>org.apache.commons.fileupload.servlet.FileCleanerCleanup</listener-class>
+  </listener-->
 
-    <resource-ref>
-        <description>MySQL Datasource example</description>
-        <res-ref-name>jdbc/flightschedule</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
-
+  <resource-ref>
+    <description>MySQL Datasource example</description>
+    <res-ref-name>jdbc/flightschedule</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+  <servlet>
+    <servlet-name>AuthServlet</servlet-name>
+    <servlet-class>net.mirantis.flights.web.AuthServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>MainPageServlet</servlet-name>
+    <servlet-class>net.mirantis.flights.web.MainPageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AuthServlet</servlet-name>
+    <url-pattern>/AuthServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>MainPageServlet</servlet-name>
+    <url-pattern>/security/MainPageServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>XMLImportServlet</servlet-name>
+    <servlet-class>net.mirantis.flights.web.XMLImportServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>XMLImportServlet</servlet-name>
+    <url-pattern>/security/admin/XMLImportServlet</url-pattern>
+  </servlet-mapping>
     <servlet>
-        <servlet-name>Auth</servlet-name>
-        <servlet-class>net.maven.Auth</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>Main</servlet-name>
-        <servlet-class>net.maven.Main</servlet-class>
-    </servlet>
+    <servlet-name>LogOutServlet</servlet-name>
+    <servlet-class>net.mirantis.flights.web.LogOutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LogOutServlet</servlet-name>
+    <url-pattern>/LogOutServlet</url-pattern>
+  </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>Auth</servlet-name>
-        <url-pattern>/Auth</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Main</servlet-name>
-        <url-pattern>/security/Main</url-pattern>
-    </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>login.jsp</welcome-file>
+  </welcome-file-list>
 
-    <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
